--- a/src/components/content/Cta.astro
+++ b/src/components/content/Cta.astro
@@ -20,7 +20,7 @@ import nenashlid from '../../../public/img/screens/nenashlid.jpg'
             Оставьте заявку и мы вам поможем
           </p>
           <a
-            href="#"
+            href="#footer"
             class="mt-8 bg-white border border-transparent rounded-xl shadow px-6 py-4 inline-flex items-center text-sm font-medium text-muted-600 hover:text-white hover:bg-primary-400 transition-colors duration-300"
           >
             Свяжитесь со мной
