--- a/src/components/section/Footer.astro
+++ b/src/components/section/Footer.astro
@@ -3,7 +3,7 @@ import Container from "@components/section/Container.astro";
 import Logo from "@components/base/Logo.astro";
 ---
 
-<footer class="font-sans bg-white dark:bg-muted-900">
+<footer id="footer" class="font-sans bg-white dark:bg-muted-900">
   <Container>
     <div class="px-5 py-24 mx-auto">
       <div class="flex flex-wrap md:text-left text-center -mb-10 -mx-4">
@@ -81,6 +81,7 @@ import Logo from "@components/base/Logo.astro";
           >
         </p>
       </div>
+      <p class="text-center text-muted-500 dark:text-muted-400 text-xs mb-6">ИП Антонов А.В. ИНН 732100424943, ОГРИПН 324730000040130</p>
     </Container>
   </div>
 </footer>
