--- a/src/components/content/InvisForm.astro
+++ b/src/components/content/InvisForm.astro
@@ -23,5 +23,7 @@ const {name2} = Astro.props
         class="w-full h-10 inline-flex items-center justify-center text-white bg-primary-600 border-0 py-2 px-6 focus:outline-none hover:bg-primary-700 rounded-lg"
         >Заказать</button
       >
+      
+      <p class="text-xs">Нажимая на кнопку Вы соглашаетесь c <a href="/politika-konfidencialnosti.pdf">политикой конфиденциальности</a></p>
     </form>
 </div>
