--- a/src/components/content/Testimonials.astro
+++ b/src/components/content/Testimonials.astro
@@ -22,12 +22,12 @@ import Card from "@components/base/Card.astro";
             <div class="w-full flex flex-col gap-8 font-sans">
               <iconify-icon class="iconify w-8 h-8 flex items-center justify-center text-3xl text-primary-600 dark:text-rose-500" icon="fa6-solid:quote-left"></iconify-icon>
               <p class="text-muted-500 dark:text-muted-300">
-                Текст отзыва Текст отзыва Текст отзыва Текст отзыва Текст отзыва Текст отзыва.
+                Хотел бы выразить искреннюю благодарность сотрудникам компании Росснаб73! Оборудование установлено, настроено и работает.
               </p>
               <div class="w-full flex items-center gap-3">
                 <div>
                   <h4 class="font-medium text-sm text-muted-800 dark:text-muted-100">
-                    Иван Иванов
+                    Иван Борисович
                   </h4>
                   <p class="text-xs text-muted-400">Глав.врач</p>
                 </div>
@@ -41,7 +41,7 @@ import Card from "@components/base/Card.astro";
             <div class="w-full flex flex-col gap-8 font-sans">
               <iconify-icon class="iconify w-8 h-8 flex items-center justify-center text-3xl text-primary-600 dark:text-rose-500" icon="fa6-solid:quote-left"></iconify-icon>
               <p class="text-muted-500 dark:text-muted-300">
-                Текст отзыва Текст отзыва Текст отзыва Текст отзыва Текст отзыва Текст отзыва.
+                Работали по расходникам, всё вовремя, документооборот вообще без проблем. Опробации и рассрочки.Короче говоря 5 баллов.
               </p>
               <div class="w-full flex items-center gap-3">
                 <div>
@@ -60,26 +60,7 @@ import Card from "@components/base/Card.astro";
             <div class="w-full flex flex-col gap-8 font-sans">
               <iconify-icon class="iconify w-8 h-8 flex items-center justify-center text-3xl text-primary-600 dark:text-rose-500" icon="fa6-solid:quote-left"></iconify-icon>
               <p class="text-muted-500 dark:text-muted-300">
-                Текст отзыва Текст отзыва Текст отзыва Текст отзыва Текст отзыва Текст отзыва.
-              </p>
-              <div class="w-full flex items-center gap-3">
-                <div>
-                  <h4 class="font-medium text-sm text-muted-800 dark:text-muted-100">
-                    Григорий Сергеевич
-                  </h4>
-                  <p class="text-xs text-muted-400">Зав. хирургии</p>
-                </div>
-              </div>
-            </div>
-          </Card>
-        </div>
-        <!-- Slides -->
-        <div class="swiper-slide">
-          <Card class="'p-6'">
-            <div class="w-full flex flex-col gap-8 font-sans">
-              <iconify-icon class="iconify w-8 h-8 flex items-center justify-center text-3xl text-primary-600 dark:text-rose-500" icon="fa6-solid:quote-left"></iconify-icon>
-              <p class="text-muted-500 dark:text-muted-300">
-                Текст отзыва Текст отзыва Текст отзыва Текст отзыва Текст отзыва Текст отзыва.
+                Покупали томограф и УЗИ-аппараты. Установили без задержек. Приятно иметь дело с профессионалами.
               </p>
               <div class="w-full flex items-center gap-3">
                 <div>
@@ -98,7 +79,7 @@ import Card from "@components/base/Card.astro";
             <div class="w-full flex flex-col gap-8 font-sans">
               <iconify-icon class="iconify w-8 h-8 flex items-center justify-center text-3xl text-primary-600 dark:text-rose-500" icon="fa6-solid:quote-left"></iconify-icon>
               <p class="text-muted-500 dark:text-muted-300">
-                Текст отзыва Текст отзыва Текст отзыва Текст отзыва Текст отзыва Текст отзыва.
+                Отличная организация!!! Опепативное обслуживание!!! Свой склад, быстрая доставка!
               </p>
               <div class="w-full flex items-center gap-3">
                 <div>
@@ -116,7 +97,7 @@ import Card from "@components/base/Card.astro";
             <div class="w-full flex flex-col gap-8 font-sans">
               <iconify-icon class="iconify w-8 h-8 flex items-center justify-center text-3xl text-primary-600 dark:text-rose-500" icon="fa6-solid:quote-left"></iconify-icon>
               <p class="text-muted-500 dark:text-muted-300">
-                Текст отзыва Текст отзыва Текст отзыва Текст отзыва Текст отзыва Текст отзыва.
+                Работали по оснащению клиники. Всё привезли и установили в срок, сервис на высоте. Хороший выбор оборудования, всегда есть в наличии. Спасибо за профессионализм!
               </p>
               <div class="w-full flex items-center gap-3">
                 <div>
