--- a/src/components/section/Footer.astro
+++ b/src/components/section/Footer.astro
@@ -49,6 +49,7 @@ import Logo from "@components/base/Logo.astro";
                 >Заказать</button
               >
             </form>
+            <p class="text-xs pt-6 pl-1">Нажимая на кнопку Вы соглашаетесь c <a href="/politika-konfidencialnosti.pdf">политикой конфиденциальности</a></p>
         </div>
         <div class="w-full mb-10 ltablet:mb-0 lg:mb-0 ltablet:w-2/6 lg:w-1/6 px-4">
           <span
@@ -81,7 +82,7 @@ import Logo from "@components/base/Logo.astro";
           >
         </p>
       </div>
-      <p class="text-center text-muted-500 dark:text-muted-400 text-xs mb-6">ИП Антонов А.В. ИНН 732100424943, ОГРИПН 324730000040130</p>
+      <p class="text-center text-muted-500 dark:text-muted-400 text-xs pb-6">ИП Антонов А.В. ИНН 732100424943, ОГРИПН 324730000040130</p>
     </Container>
   </div>
 </footer>
