--- a/src/components/hero/HeroMain.astro
+++ b/src/components/hero/HeroMain.astro
@@ -16,10 +16,11 @@ import Modal from "@components/content/Modal.astro";
           class="h-full ptablet:max-w-lg ptablet:mx-auto flex items-center mb-8 ltablet:mb-0 lg:mb-0"
         >
           <div
-            class="text-center ltablet:text-left lg:text-left font-sans space-y-4 pt-14"
+            class="text-center ltablet:text-left lg:text-left font-sans space-y-4 pt-14 font-light"
           >
+            <!-- <p class="lg:mt-1 mb-4 ml-[2px] text-muted-700 dark:text-white text-md">ИП Антонов</p> -->
             <p
-              class="font-medium text-3xl ptablet:text-4xl lg:text-[42px] mt-12 lg:mt-1 mb-8 text-muted-800 dark:text-white"
+              class="font-medium leading-[50px] text-3xl ptablet:text-4xl lg:text-[56px] mt-12 lg:mt-1 mb-8 text-muted-800 dark:text-white uppercase"
             >
             Комплексная медицина
             </p>
