--- a/src/components/navigation/Navbar.astro
+++ b/src/components/navigation/Navbar.astro
@@ -25,10 +25,12 @@ import NavbarSearchFilters from "@components/navigation/NavbarSearchFilters.astr
         >
           <Logo class="'w-9 h-9'" />
         </div>
-        <span
-          class="font-sans text-lg tracking-widest uppercase text-muted-800 dark:text-muted-100"
-          >РосСнаб73</span
-        >
+        <div>
+          <div class="flex flex-col">
+            <div class="font-sans text-lg tracking-widest uppercase text-muted-800 dark:text-muted-100">РосСнаб73</div>
+            <div class="text-xs font-light uppercase">Группа компаний</div> 
+          </div>
+        </div>
       </a>
       <div class="flex items-center justify-center h-20 w-20 lg:hidden ml-auto">
         <Hamburger />
@@ -63,8 +65,12 @@ import NavbarSearchFilters from "@components/navigation/NavbarSearchFilters.astr
           <ThemeToggler />
         </div>
       </div>
-      <div class="w-full md:w-auto">
+      <!-- <div class="w-full md:w-auto">
         <a class="text-md font-bold dark:text-[#fff]" href="tel:+79021254556"> +7 902 125 45 56</a>
+      </div> -->
+      <div class="w-full md:w-auto flex flex-col">
+        <div class="text-muted-700 dark:text-white text-md text-right">ИП Антонов</div>
+        <a class="text-md font-bold dark:text-[#fff]" href="tel:+79021254556"> +7 902 125 45 56</a> 
       </div>
     </div>
   </div>
