--- a/src/components/navigation/Navbar.astro
+++ b/src/components/navigation/Navbar.astro
@@ -69,8 +69,8 @@ import NavbarSearchFilters from "@components/navigation/NavbarSearchFilters.astr
         <a class="text-md font-bold dark:text-[#fff]" href="tel:+79021254556"> +7 902 125 45 56</a>
       </div> -->
       <div class="w-full md:w-auto flex flex-col">
-        <div class="text-muted-700 dark:text-white text-md text-right">ИП Антонов</div>
-        <a class="text-md font-bold dark:text-[#fff]" href="tel:+79021254556"> +7 902 125 45 56</a> 
+        <a class="text-md font-bold dark:text-[#fff]" href="tel:+79176254554"> +7 917 625 45 54</a> 
+        <a href="mail:ipantonov73@bk.ru" class="text-muted-700 dark:text-white text-md">ipantonov73@bk.ru</a>
       </div>
     </div>
   </div>
