--- a/src/components/section/Footer.astro
+++ b/src/components/section/Footer.astro
@@ -27,8 +27,7 @@ import Logo from "@components/base/Logo.astro";
           </div>
         </div>
         <div class="w-full mb-10 ltablet:mb-0 lg:mb-0 ltablet:w-2/6 lg:w-3/6 px-4">
-          
-          <div class="font-bold text-lg mb-8 dark:text-gray-50">Заказать обратный звонок</div>
+            <div class="font-bold text-lg mb-6 dark:text-gray-50">Заказать обратный звонок</div>
             <form class="w-full ltablet:w-auto lg:w-auto flex flex-col md:flex-row items-center justify-center md:justify-start gap-y-2">
               <div class="relative w-full sm:w-64 md:w-40 sm:mr-4 mr-2">
                 <input
@@ -52,16 +51,20 @@ import Logo from "@components/base/Logo.astro";
             <p class="text-xs pt-6 pl-1">Нажимая на кнопку Вы соглашаетесь c <a href="/politika-konfidencialnosti.pdf">политикой конфиденциальности</a></p>
         </div>
         <div class="w-full mb-10 ltablet:mb-0 lg:mb-0 ltablet:w-2/6 lg:w-1/6 px-4">
-          <span
-          class="inline-flex ltablet:ml-auto lg:ml-auto md:mt-0 mt-6 w-full justify-center md:justify-start md:w-auto"
-        >
-          <a href="#" class="text-muted-500">
-            <iconify-icon class="iconify w-12 h-12 flex items-center justify-center text-3xl" icon="hugeicons:vk"></iconify-icon>
-          </a>
-          <a href="#" class="ml-3 text-muted-500">
-            <iconify-icon class="iconify w-12 h-12 flex items-center justify-center text-3xl" icon="ic:baseline-telegram"></iconify-icon>
-          </a>
-        </span>
+
+          <div class="font-bold text-lg mb-4 dark:text-gray-50">Контакты</div>
+          <div class="flex flex-col">
+            <a href="tel:+79176254554" class="text-muted-700 dark:text-white text-md"> +7 917 625 45 54</a>
+            <a href="mail:ipantonov73@bk.ru" class="text-muted-700 dark:text-white text-md">ipantonov73@bk.ru</a>
+          </div>
+          <!-- <span class="inline-flex ltablet:ml-auto lg:ml-auto md:mt-0 mt-6 w-full justify-center md:justify-start md:w-auto">
+            <a href="#" class="text-muted-500">
+              <iconify-icon class="iconify w-12 h-12 flex items-center justify-center text-3xl" icon="hugeicons:vk"></iconify-icon>
+            </a>
+            <a href="#" class="ml-3 text-muted-500">
+              <iconify-icon class="iconify w-12 h-12 flex items-center justify-center text-3xl" icon="ic:baseline-telegram"></iconify-icon>
+            </a>
+          </span> -->
         </div>
       </div>
     </div>
