--- a/src/components/navigation/Navbar.astro
+++ b/src/components/navigation/Navbar.astro
@@ -28,7 +28,7 @@ import NavbarSearchFilters from "@components/navigation/NavbarSearchFilters.astr
         <div>
           <div class="flex flex-col">
             <div class="font-sans text-lg tracking-widest uppercase text-muted-800 dark:text-muted-100">РосСнаб73</div>
-            <div class="text-xs font-light uppercase">Группа компаний</div> 
+            <div class="text-xs font-light uppercase dark:text-muted-100">Группа компаний</div> 
           </div>
         </div>
       </a>
