--- a/src/components/section/Footer.astro
+++ b/src/components/section/Footer.astro
@@ -28,18 +28,19 @@ import Logo from "@components/base/Logo.astro";
         </div>
         <div class="w-full mb-10 ltablet:mb-0 lg:mb-0 ltablet:w-2/6 lg:w-3/6 px-4">
             <div class="font-bold text-lg mb-6 dark:text-gray-50">Заказать обратный звонок</div>
-            <form class="w-full ltablet:w-auto lg:w-auto flex flex-col md:flex-row items-center justify-center md:justify-start gap-y-2">
+            <form action="/send.php" method="POST" class="w-full ltablet:w-auto lg:w-auto flex flex-col md:flex-row items-center justify-center md:justify-start gap-y-2">
+              <input type="hidden" name="FormName" value="footer форма">
               <div class="relative w-full sm:w-64 md:w-40 sm:mr-4 mr-2">
                 <input
                   type="text"
-                  class="w-full h-10 bg-muted-100 dark:bg-muted-700 bg-opacity-50 rounded-lg border border-muted-300 dark:border-muted-600 text-sm text-muted-700 py-1 px-3 leading-8 tw-accessibility transition-colors duration-300 ease-in-out"
+                  class="w-full h-10 bg-muted-100 bg-opacity-50 rounded-lg border border-muted-300 text-sm text-muted-700 py-1 px-3 leading-8 tw-accessibility transition-colors duration-300 ease-in-out"
                   placeholder="Имя"
                 />
               </div>
               <div class="relative w-full sm:w-64 md:w-40 sm:mr-4 mr-2">
                 <input
                   type="text"
-                  class="w-full h-10 bg-muted-100 dark:bg-muted-700 bg-opacity-50 rounded-lg border border-muted-300 dark:border-muted-600 text-sm text-muted-700 py-1 px-3 leading-8 tw-accessibility transition-colors duration-300 ease-in-out"
+                  class="w-full h-10 bg-muted-100 bg-opacity-50 rounded-lg border border-muted-300 text-sm text-muted-700 py-1 px-3 leading-8 tw-accessibility transition-colors duration-300 ease-in-out"
                   placeholder="+7 999 999 99 99"
                 />
               </div>
@@ -48,7 +49,7 @@ import Logo from "@components/base/Logo.astro";
                 >Заказать</button
               >
             </form>
-            <p class="text-xs pt-6 pl-1">Нажимая на кнопку Вы соглашаетесь c <a href="/politika-konfidencialnosti.pdf">политикой конфиденциальности</a></p>
+            <p class="text-xs pt-6 pl-1 dark:text-muted-300">Нажимая на кнопку Вы соглашаетесь c <a href="/politika-konfidencialnosti.pdf">политикой конфиденциальности</a></p>
         </div>
         <div class="w-full mb-10 ltablet:mb-0 lg:mb-0 ltablet:w-2/6 lg:w-1/6 px-4">
 
