поправил форму в подвале

--- a/src/components/section/Footer.astro
+++ b/src/components/section/Footer.astro
@@ -35,6 +35,8 @@ import Logo from "@components/base/Logo.astro";
                   type="text"
                   class="w-full h-10 bg-muted-100 bg-opacity-50 rounded-lg border border-muted-300 text-sm text-muted-900 py-1 px-3 leading-8 tw-accessibility transition-colors duration-300 ease-in-out"
                   placeholder="Имя"
+                  name="Name"
+                  required 
                 />
               </div>
               <div class="relative w-full sm:w-64 md:w-40 sm:mr-4 mr-2">
@@ -42,6 +44,8 @@ import Logo from "@components/base/Logo.astro";
                   type="text"
                   class="w-full h-10 bg-muted-100 bg-opacity-50 rounded-lg border border-muted-300 text-sm text-muted-900 py-1 px-3 leading-8 tw-accessibility transition-colors duration-300 ease-in-out"
                   placeholder="+7 999 999 99 99"
+                  name="Phone"
+                  required 
                 />
               </div>
               <button
