--- a/src/components/content/Modal.astro
+++ b/src/components/content/Modal.astro
@@ -27,6 +27,7 @@ const {name} = Astro.props
                     class="w-full h-10 bg-muted-100 bg-opacity-50 rounded-lg border border-muted-300 text-sm text-muted-900 py-1 px-3 leading-8 tw-accessibility transition-colors duration-300 ease-in-out"
                     placeholder="Имя"
                     name="Name"
+                    required
                   />
                 </div>
                 <div class="relative w-full">
@@ -35,6 +36,7 @@ const {name} = Astro.props
                     class="w-full h-10 bg-muted-100 bg-opacity-50 rounded-lg border border-muted-300 text-sm text-muted-900 py-1 px-3 leading-8 tw-accessibility transition-colors duration-300 ease-in-out"
                     placeholder="+7 999 999 99 99"
                     name="Phone"
+                    required
                   />
                 </div>
                 <div class="relative w-full">
